--- a/admin/webapp/websrc/app/routes/nodes/node-details/node-details.component.scss
+++ b/admin/webapp/websrc/app/routes/nodes/node-details/node-details.component.scss
@@ -1,6 +1,6 @@
 .filter {
   position: relative;
-  left: calc(100% - 196px);
+  left: calc(100% - 336px);
   top: -4px;
   z-index: 10000;
   display: flex;
@@ -12,19 +12,19 @@
 }
 
 .filter-csv {
-  left: calc(100% - 286.5px) !important;
+  left: calc(100% - 396.5px) !important;
 }
 
 .filter-view {
-  left: calc(100% - 288.5px) !important;
+  left: calc(100% - 428.5px) !important;
 }
 
 .filter-view-csv {
-  left: calc(100% - 379px) !important;
+  left: calc(100% - 489px) !important;
 }
 
 .filter-container {
-  left: calc(100% - 236px) !important;
+  left: calc(100% - 346px) !important;
 }
 
 .node-detail-tab-group {
